update media query for mobile devices in #Conversation class to ensure modal remains the same width and height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -57,17 +57,17 @@ html {
   max-width: 620px;
 }
 
-/* handle mobile phones */
-@media (max-width: 480px) {
+/* media query for mobile devices */
+@media (max-width: 767px) {
   #Conversation {
-    max-width: 100vw; /* allow modal to take full width on very small screens */
-    min-width: 85%;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 90vw;
+    min-width: initial;
+    max-width: initial;
+    top: 10vh;
+    left: 5vw;
+    right: 5vw;
     margin-top: 0;
+    height: 80vh;
   }
 }
 
